metadata-classic/objects/MIIncidentAction__c.object
<CustomObject>
    <description>Custom object used to store records pertaining to actions taken for the resolution of an MI dispute / incident between pro and customer.</description>
    <fields>
        <fullName>AdjustedTotalPayout__c</fullName>
        <formula>AdjusterTotalAmountPaid__c - ApolloCovered__c</formula>
        <label>Adjusted Total Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjusterStatus__c</fullName>
        <description>Picklist to indicate the status of the 3rd party insurance adjuster process.</description>
        <label>Adjuster Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed report</fullName>
                </value>
                <value>
                    <fullName>Waiting for approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied/Further review needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdjusterTotalAmountPaid__c</fullName>
        <description>The total amount paid to the Insurance Adjustment company for the related incident.</description>
        <label>Adjuster Total Amount Paid</label>
        <summarizedField>IncidentInsuranceClaim__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>IncidentInsuranceClaim__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Adjuster Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>IncidentInsuranceClaim__c.IncidentAction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The dollar amount of the action (i.e., amount charged to card, amount to collect, amount to payout).</description>
        <inlineHelpText>The dollar amount of the action (i.e., amount charged to card, amount to collect, amount to payout).</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApolloCovered__c</fullName>
        <label>Apollo Covered</label>
        <summarizedField>IncidentInsuranceClaim__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>IncidentInsuranceClaim__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Apollo Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>IncidentInsuranceClaim__c.IncidentAction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <description>Picklist to indicate which manager approved the payout.</description>
        <label>Approved By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashley Powell</fullName>
                </value>
                <value>
                    <fullName>Jody Kershaw</fullName>
                </value>
                <value>
                    <fullName>Jonathan Bushnell</fullName>
                </value>
                <value>
                    <fullName>Lindsay Harrop</fullName>
                </value>
                <value>
                    <fullName>Robyn Jeserick</fullName>
                </value>
                <value>
                    <fullName>Simon Fullerton</fullName>
                </value>
                <value>
                    <fullName>Tyler Bailey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AptSuite__c</fullName>
        <description>The apartment or suite number related to the street address.</description>
        <label>Apt/Suite</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CityStateZip__c</fullName>
        <description>The city state and zip code related to the street address.</description>
        <label>City, State, Zip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <description>Formula to represent if the MI Incident action is in a closed status based on Record Type; used in trigger code to populate &quot;Completed On&quot; and &quot;Completed By&quot; time stamps.</description>
        <formula>IF(AND(RecordType.Name = &quot;Task&quot;, 
NOT ISPICKVAL(Status__c, &quot;Open&quot;)),True, 
IF(AND(RecordType.Name = &quot;Payout&quot;, 
OR(ISPICKVAL(Status__c,&quot;Payment Sent&quot;), 
ISPICKVAL(Status__c,&quot;Rejected&quot;))),True, 
IF(AND(RecordType.Name = &quot;Guarantee&quot;, 
OR(ISPICKVAL(Status__c, &quot;Completed&quot;), 
ISPICKVAL(Status__c, &quot;Paid (under Property Damage Guarantee)&quot;), 
ISPICKVAL(Status__c, &quot;Paid (under Money Back Guarantee)&quot;), 
ISPICKVAL(Status__c, &quot;Paid (under Satisfaction)&quot;), 
ISPICKVAL(Status__c, &quot;Not paid&quot;))),True, 
IF(AND(RecordType.Name = &quot;Charge Card&quot;, 
NOT ISPICKVAL(Status__c, &quot;Open&quot;)),True, 
False))))</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollectionsAmountRecovered__c</fullName>
        <description>The dollar amount of money recovered after pursuing collections.</description>
        <label>Collections Amount Recovered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CollectionsPursued__c</fullName>
        <description>Indicates if we have or will pursue collections.</description>
        <label>Collections Pursued</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who completed the action.</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MIIncidentActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedOn__c</fullName>
        <description>The date/time when the action was completed.</description>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>The date the action is due.</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EligibilityFactors__c</fullName>
        <description>Picklist whose values describe why a property damage or money back guarantee were not eligible.</description>
        <label>Eligibility Factors</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GuaranteeType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Meets all criteria</fullName>
                </value>
                <value>
                    <fullName>60 day documentation overdue</fullName>
                </value>
                <value>
                    <fullName>Contract terms met, customer still dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Damage is to excluded property</fullName>
                </value>
                <value>
                    <fullName>Damage not caused by Thumbtack Pro</fullName>
                </value>
                <value>
                    <fullName>Damage was not accidental/unintentional</fullName>
                </value>
                <value>
                    <fullName>Insufficient documentation</fullName>
                </value>
                <value>
                    <fullName>Job not requested on TT</fullName>
                </value>
                <value>
                    <fullName>No damage from original project request</fullName>
                </value>
                <value>
                    <fullName>No proof of hire</fullName>
                </value>
                <value>
                    <fullName>Not covered in TOU</fullName>
                </value>
                <value>
                    <fullName>Not physical damage</fullName>
                </value>
                <value>
                    <fullName>Not reported within timeline (14 days)</fullName>
                </value>
                <value>
                    <fullName>Other (leave notes)</fullName>
                </value>
                <value>
                    <fullName>Other - Eligible (leave notes)</fullName>
                </value>
                <value>
                    <fullName>Other - Not eligible (leave notes)</fullName>
                </value>
                <value>
                    <fullName>Outside 6 month reporting time</fullName>
                </value>
                <value>
                    <fullName>Proof of hire not established within 30 days of request</fullName>
                </value>
                <value>
                    <fullName>Request made before Guarantee effective date</fullName>
                </value>
                <value>
                    <fullName>Request was made prior to MBG program start date</fullName>
                </value>
                <value>
                    <fullName>Theft</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>The full name of the person receiving payout.</description>
        <label>Full Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GuaranteeType__c</fullName>
        <label>Guarantee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Property damage guarantee</fullName>
                </value>
                <value>
                    <fullName>Money back guarantee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentAmountinDispute__c</fullName>
        <description>Formula field to bring over the amount of dispute from the related Incident; used in list views and reporting.</description>
        <formula>MIIncident__r.AmountInDispute__c</formula>
        <label>Incident Amount in Dispute</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate if the record is test or sample data that can be deleted.</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleToCS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating true if the note should be visible to CS agents, used in code to update case.</description>
        <label>Is Visible to CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last4ofCard__c</fullName>
        <description>The last 4 digits of the card we attempted to charge.</description>
        <label>Last 4 of Card</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentNumber__c</fullName>
        <description>Formula to display the MI Incident number on the MI Incident action record; used for pdf rendering.</description>
        <formula>MIIncident__r.IncidentNumber__c</formula>
        <label>MI Incident Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncident__c</fullName>
        <description>Lookup to the parent MI Incident record.</description>
        <label>MI Incident</label>
        <referenceTo>MIIncident__c</referenceTo>
        <relationshipName>MIIncidentActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Open text area to store notes about the action.</description>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDGEligibility__c</fullName>
        <description>Formula field to calculate the eligibility of the property damage guarantee.</description>
        <formula>IF(OR(
ISPICKVAL(EligibilityFactors__c, &quot;Contract terms met, customer still dissatisfied&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Damage is to excluded property&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Damage not caused by Thumbtack Pro&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Damage was not accidental/unintentional&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Excluded category&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Insufficient documentation&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Job not requested on TT&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;No proof of hire&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Not damage from original project requested&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Not covered in TOU&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Not marked as hired&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Not physical damage&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Not reported within timeline (14 days)&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Not reported within timeframe&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Other - Not eligible (leave notes)&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Other (leave notes)&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Outside 6 month reporting time&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Proof of hire not established within 30 days of request&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Request made before Guarantee effective date&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;Theft&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Unresponsive Customer&quot;),
ISPICKVAL(EligibilityFactors__c, &quot;60 day documentation overdue&quot;)
 ),&quot;Not Eligible&quot;, 

IF(OR( 
ISPICKVAL(EligibilityFactors__c, &quot;Meets all criteria&quot;), 
ISPICKVAL(EligibilityFactors__c, &quot;Other - Eligible (leave notes)&quot;) 
),&quot;Eligible&quot;, 

IF(AND(
MIIncident__r.quotes_hired__c = True, 
MIIncident__r.ElapsedReportedTimeDays__c &lt;= 72, 
DATETIMEVALUE(MIIncident__r.request_create_time__c) &gt;= DATETIMEVALUE( &apos;2016-07-11 12:00:00&apos; ) 
),&quot;May Be Eligible&quot;, 

&quot; Not Eligible &quot; 
)))</formula>
        <label>Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceNumber__c</fullName>
        <description>The case or other reference number to the third party resolution platform.</description>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The overall status of the incident action.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Soft decline</fullName>
                </value>
                <value>
                    <fullName>Hard decline</fullName>
                </value>
                <value>
                    <fullName>No charge possible</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Pre-adjuster resolution process</fullName>
                </value>
                <value>
                    <fullName>Claim sent to adjuster</fullName>
                </value>
                <value>
                    <fullName>Claim in process</fullName>
                </value>
                <value>
                    <fullName>Paid (under Property Damage Guarantee)</fullName>
                </value>
                <value>
                    <fullName>Paid (under Money Back Guarantee)</fullName>
                </value>
                <value>
                    <fullName>Paid (under Satisfaction)</fullName>
                </value>
                <value>
                    <fullName>Not paid</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Payment sent</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Sent for approval</fullName>
                </value>
                <value>
                    <fullName>No card on file</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <description>Text area to store the street address of the person to whom the payout should be sent.</description>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <description>External transaction ID number from 3rd party vendor (e.g., cc charge).</description>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Picklist whose values indicate the type of incident action.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit card charge payout</fullName>
                </value>
                <value>
                    <fullName>Arbitration only</fullName>
                </value>
                <value>
                    <fullName>Arbitration with chat</fullName>
                </value>
                <value>
                    <fullName>Chat only</fullName>
                </value>
                <value>
                    <fullName>Money Back Guarantee (above $500)</fullName>
                </value>
                <value>
                    <fullName>Property damage (above $500)</fullName>
                </value>
                <value>
                    <fullName>Satisfaction payout (above $1000)</fullName>
                </value>
                <value>
                    <fullName>Collections on customer&apos;s behalf (above $1000)</fullName>
                </value>
                <value>
                    <fullName>Customer satisfaction</fullName>
                </value>
                <value>
                    <fullName>Customer satisfaction - low dollar</fullName>
                </value>
                <value>
                    <fullName>Property damage guarantee</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Successful card charge</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>High dollar</fullName>
                </value>
                <value>
                    <fullName>MI concern</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Money back guarantee</fullName>
                    <isActive>false</isActive>
                    <label>Money back guarantee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MI Incident Action</label>
    <listViews>
        <fullName>AllCompletedActions</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CompletedBy__c</columns>
        <columns>CompletedOn__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.ChargeCard,MIIncidentAction__c.Guarantee,MIIncidentAction__c.Payout</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>C4: All Completed Actions</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCompletedTasksAndNotes</fullName>
        <columns>NAME</columns>
        <columns>DueDate__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>CompletedOn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Task</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Follow-up,Note</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>C2: All Completed Tasks &amp; Notes</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllFollowUpTasksToDo</fullName>
        <columns>NAME</columns>
        <columns>DueDate__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Task</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Follow-up</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>C1: All Follow-up Tasks (To Do)</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllPendingActions</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.ChargeCard,MIIncidentAction__c.Guarantee,MIIncidentAction__c.Payout</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>equals</operation>
        </filters>
        <label>C3: All Pending Actions</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUncompletedActions</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Guarantee,MIIncidentAction__c.ChargeCard,MIIncidentAction__c.Payout</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>equals</operation>
        </filters>
        <label>A1: All Uncompleted Actions</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedChargeCards</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Last4ofCard__c</columns>
        <columns>TransactionID__c</columns>
        <columns>CompletedBy__c</columns>
        <columns>CompletedOn__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.ChargeCard</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>D2: Completed Charge Cards</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedChargeCardsLast30Days</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Last4ofCard__c</columns>
        <columns>TransactionID__c</columns>
        <columns>CompletedBy__c</columns>
        <columns>CompletedOn__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.ChargeCard</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>D3: Completed Charge Cards-Last 30 Days</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedGuaranteeReviews</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>EligibilityFactors__c</columns>
        <columns>PDGEligibility__c</columns>
        <columns>AdjusterStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CompletedBy__c</columns>
        <columns>CompletedOn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Guarantee</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>F2: Completed Guarantee Reviews</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedGuaranteeReviewsLast30</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>EligibilityFactors__c</columns>
        <columns>PDGEligibility__c</columns>
        <columns>AdjusterStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CompletedBy__c</columns>
        <columns>CompletedOn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Guarantee</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>F3: Completed Guarantee Reviews-Last 30</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedPayoutRequests</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Payout</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>E2: Completed Payout Requests</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedPayoutRequestsLast30</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Notes__c</columns>
        <columns>MIIncidentNumber__c</columns>
        <columns>MIIncident__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncidentAction__c.Payout</value>
        </filters>
        <filters>
            <field>CompletedOn__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>E3: Completed Payout Requests-Last 30</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SystemLevelAccess</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>